--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,21 @@ a:hover{
     color: #65379B;
 }
 
-.header {
+.navbar {
     width: 100%;
     background: linear-gradient(-225deg, #65379B 0%, #886AEA 53%, #6457C6 100%);
     height: 120px;
+}
+
+.header-logo {
+    width: 70px;
+    height: 60px;
+}
+
+.header-logo:hover {
+    transform: scale(1.15);
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    z-index: 10;
 }
 
 .page-title {
